<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryVariant"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/deletequestion"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/fm_start_button"
            android:includeFontPadding="false"
            android:text="@string/abbrechenbtn" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/fm_start_button"
            android:text="@string/deletebtn" />
    </LinearLayout>

</LinearLayout>