<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layoutDescription="@xml/activity_start_scene"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="123dp"
        android:background="@drawable/fm_start_button"
        android:elevation="2dp"
        android:gravity="center"
        android:stateListAnimator="@animator/btnstart"
        android:text="@string/btnStart"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp"
        android:translationZ="6dp"
        app:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.38" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="238dp"
        android:layout_height="177dp"
        android:alpha="1"
        android:contentDescription="@string/imgStartDescription"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61"
        app:srcCompat="@drawable/anim_logo" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="250dp"
        android:shadowColor="#BF000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="25"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>