<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:gravity="start|top"
        android:hint="@string/texthint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="50dp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toTopOf="@+id/rlPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rlPlayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryVariant"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rlButtons"
        tools:layout_editor_absoluteX="291dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_play" />

            <ImageButton
                android:id="@+id/btnStop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_stop" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlButtons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryVariant"
        android:elevation="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryVariant"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/cdcamera"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:stateListAnimator="@animator/btnstart"
                app:srcCompat="@drawable/ic_reader_btn_camera" />

            <ImageButton
                android:id="@+id/btnGallery"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/cdgallery"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:stateListAnimator="@animator/btnstart"
                app:srcCompat="@drawable/ic_reader_btn_picture" />

            <ImageButton
                android:id="@+id/btnLibrary"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/cdlist"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:stateListAnimator="@animator/btnstart"
                app:srcCompat="@drawable/ic_reader_btn_menu" />

            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/cdcamera"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:stateListAnimator="@animator/btnstart"
                app:srcCompat="@drawable/ic_reader_btn_save" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>